<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.jakirespons.mvvm.main.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/sort" />

    <RadioGroup
        android:id="@+id/rg_options"
        android:checkedButton="@id/rb_baru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paling_baru" />

        <RadioButton
            android:id="@+id/rb_mou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paling_lama" />

        <RadioButton
            android:id="@+id/rb_lvg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/banyak_komen" />

        <RadioButton
            android:id="@+id/rb_moyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banyak_dukung" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.5"
            android:text="@string/close" />

        <Button
            android:id="@+id/btn_choose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="0.5"
            android:text="@string/choose" />
    </LinearLayout>
</LinearLayout>
