<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/gambar_laporan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@color/teal_200" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_like" />
        </FrameLayout>

        <TextView
            android:id="@+id/judul_laporan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            tools:text="@string/dummy_judul"
            android:textSize="32sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                android:text="@string/ditel_laporan"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:text="@string/nomor_laporan" />

            <TextView
                android:id="@+id/nomor_laporan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                tools:text="@string/no_lap"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:text="@string/tanggal_masuk" />

            <TextView
                android:id="@+id/tanggal_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                tools:text="@string/tgl_lap"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:text="@string/kategori_lap" />

            <TextView
                android:id="@+id/kategori_lap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                tools:text="@string/kate_lap"
                android:textColor="@android:color/black" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                android:text="@string/lok_laporan"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/lokasi_laporan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                tools:text="@string/lokasi_laporan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                android:text="@string/stat_laporan"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/status_lap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:lineSpacingMultiplier="1"
                android:textSize="12sp"
                tools:text="@string/stat_lap"
                android:textColor="@android:color/holo_purple" />

            <TextView
                android:id="@+id/tgl_proses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                tools:text="@string/tgl_proses" />

            <TextView
                android:id="@+id/proses_laporan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                tools:text="@string/lap_proses"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>
</ScrollView>